--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Labis"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config">
         <activity
-            android:name=".ui.screen.auth.AuthActivity"
+            android:name=".ui.screen.splash.SplashActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Labis">
@@ -33,6 +35,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <activity android:name=".ui.screen.auth.AuthActivity"/>
         <activity
             android:name="com.canhub.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" /> <!-- optional (needed if default theme has no action bar) -->
@@ -41,6 +44,8 @@
         <activity android:name=".ui.screen.product.ProductActivity" />
         <activity android:name=".ui.screen.order.OrderActivity"/>
         <activity android:name=".ui.screen.report.ReportActivity"/>
+        <activity android:name=".ui.screen.capitalexpenditure.CapitalExpenditureActivity"
+            android:windowSoftInputMode="adjustResize"/>
     </application>
 
 </manifest>
